Added assets, styles, index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<p>Hello world</p>
+<!DOCTYPE html>
+<head>
+    <html charset="UTF=8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <title>Chromoprotein's Spaghetteria</title>
+</head>
+<body>
+    <header>
+        <nav id="navbar">
+            <a href="#welcome-section">Top</a>
+            <a href="#projects">Projects</a>
+            <a href="#links-section">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section id="welcome-section">
+            <h1 id="welcome-title">Welcome to Chromoprotein's Spaghetteria</h1>
+            <img src="./assets/spaghetti.png" id="welcome-image">
+        </section>
+        <section id="description">
+            <h2>Facts about me</h2>
+            <ul id="description-list">
+                <li>29 years old</li>
+                <li>Self-taught front-end developer</li>
+                <li>Master's degree in Biotech kek</li>
+                <li>Geek</li>
+                <li>Creative</li>
+            </ul>
+        </section>
+        <section id="projects">
+            <h2>My projects</h2>
+            <div id="project-flex-wrapper">
+                <figure class="project-tile">
+                    <a href=""><img src="./assets/image-1.jpg" class="project-image">
+                    <figcaption class="project-caption">Lorem ipsum page</figcaption></a>
+                </figure>
+                <figure class="project-tile">
+                    <a href=""><img src="./assets/image-2.jpg" class="project-image">
+                    <figcaption class="project-caption">Plumbus page</figcaption></a>
+                </figure>
+                <figure class="project-tile">
+                    <a href=""><img src="./assets/image-3.jpg" class="project-image">
+                    <figcaption class="project-caption">Survey page</figcaption></a>
+                </figure>
+                <figure class="project-tile">
+                    <a href=""><img src="./assets/image-4.jpg" class="project-image">
+                    <figcaption class="project-caption">Lab protocol page</figcaption></a>
+                </figure>
+                <figure class="project-tile">
+                    <a href=""><img src="./assets/image-5.jpg" class="project-image">
+                    <figcaption class="project-caption">Random page</figcaption></a>
+                </figure>
+            </div>
+        </section>
+        <section id="links-section">
+            <h2>Contact me</h2>
+            <div id="links-grid">
+                <a id="profile-link" href="https://www.freecodecamp.org/Chromoprotein"><img class="contact-img" src="./assets/fcc_primary_small.png"></a>
+                <a href="https://github.com/Chromoprotein"><img class="contact-img" src="./assets/github-mark.png"></a>
+                <a href="https://www.linkedin.com"><img class="contact-img" src="./assets/LI-Bug.svg.original.svg"></a>
+            </div>
+        </section>
+    </main>
+</body>
